@@ -2,6 +2,7 @@ Revision history for Perl module Getopt::Lucid
 
 0.17
     - Clarify 5.006 as minimum requirement; update other minimum requirements
+    - A repeated params now replaces instead of throwing an error
     - Fix for ambiguous param bug (RT#33462, patch from Torsten Link)
 
 0.16 Thu Aug 17 23:04:38 EDT 2006
